<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5sp"
    android:paddingEnd="5sp">

    <TextView
        android:id="@+id/txt_about_restaurant"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:text="@string/register_restaurant"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/txt_about_restaurant" />
    />
    <EditText
        android:id="@+id/reg_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_below="@id/reg_name" />
    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_below="@id/reg_location" />
    <EditText
        android:id="@+id/reg_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_below="@id/reg_phone" />
    <EditText
        android:id="@+id/reg_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rating_1_5"
        android:layout_below="@id/reg_description" />
    <Button
        android:id="@+id/btn_add_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_restaurant"
        android:layout_marginTop="20sp"
        android:layout_below="@id/reg_rating"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_restaurants"
        android:layout_below="@id/btn_add_restaurant"/>


</RelativeLayout>